# lrw-vep-ub2026

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  WORKSHOP_ACTIVITY.md  pyproject.toml  requirements-workshop.txt
.claude/skills/dispatcher/: README.md  SKILL.md
.claude/skills/dispatcher/references/: backend_schema.md  workload_spec.md
.claude/skills/dispatcher/references/backends/: _template.json
.claude/skills/dispatcher/scripts/: check_local.sh  check_slurm.sh  detect_substrates.sh  route.py
.github/workflows/: validate.yml
docs/internal/: ACKNOWLEDGMENTS_DRAFT.md  BLOG_NOTES.md  FRIDAY_CODEALONG.md  FRIDAY_RUNBOOK.md  READABILITY.md  RESOLUTION_PANEL_AUDIT.md  WORKSHOP_BEATS.md  WORKSHOP_READINESS.md  WORKSHOP_SET_LINEAGE.md
experiments/: CLAUDE.md  EXPERIMENT_LOG.md  PROVENANCE.md
experiments/analysis/: 00_demo_umap.py  01_resolution_panels.py  02_llr_distribution.py  _config.py
experiments/analysis/data/: demo_pair_scores.json  verify_llr_full.npz
experiments/analysis/results/: demo_umap_brca1.csv  first_prompt_brca1.csv  llr_distribution_500.csv  llr_distribution_500.json  resolution_panels.csv
experiments/configs/: meta.yaml
experiments/configs/manylatents-omics/experiment/: alignment_matrix.yaml  encode_esm1b_brca1.yaml  encode_esm1b_brca1_mila.yaml  encode_esm1b_brca1_slurm_template.yaml  encode_esm3.yaml  encode_evo2.yaml  encode_orthrus.yaml  fusion_base.yaml  single_modality_baselines.yaml
experiments/configs/manylatents-omics/experiment/fusion/: autoencoder.yaml  concat.yaml  concat_norm.yaml  concat_pca.yaml  frobenius_ae.yaml  modality_proj.yaml  svd.yaml
experiments/data/: demo_pair.json
experiments/data/clinvar/: README.md  dna.fasta  protein.fasta  variants.tsv
experiments/data/clinvar/brca2/: dna.fasta  protein.fasta  variants.tsv
experiments/data/clinvar/mlh1/: protein.fasta  rna.fasta  variants.tsv
experiments/data/clinvar/pten/: dna.fasta  protein.fasta  variants.tsv
experiments/data/clinvar/tp53/: dna.fasta  protein.fasta  variants.tsv
experiments/notebooks/: 01_workshop_followalong.ipynb  CLAUDE.md  pyproject.toml  requirements-workshop.txt  test_vep_utils.py  validate.py  validate_genes.py  validate_notebook.py  validate_paper.py  vep_utils.py
experiments/notebooks/data/: demo_pair.tsv  s3_scores.npz  validation_proteins.fasta  validation_variants.csv  workshop_set.tsv  workshop_set_README.md  workshop_set_manifest.json  workshop_set_proteins.fasta  workshop_set_v1.tsv  workshop_set_v1_manifest.json  workshop_set_v1_proteins.fasta  workshop_set_v2.tsv  workshop_set_v2_README.md  workshop_set_v2_manifest.json
experiments/notebooks/data/_archive/: s3_scores_v1_in_flight_2026-05-11.npz  s3_scores_workshop_set_v1_2026-05-11.npz  validation_manifest_v1_in_flight_2026-05-11.json  validation_proteins_v1_in_flight_2026-05-11.fasta  validation_variants_v1_in_flight_2026-05-11.csv  workshop_set_v1_canonical-only_README_2026-05-11.md
experiments/scripts/: add_tool  build_validation_set.py  cache_s3_scores.py  check_clinvar  pick_demo_pair.py  run_experiment  run_first_prompt.py  score_demo_pair.py  snapshot_experiment  verify_library_vep.py  verify_llr_independent.py
paper/: main.tex
shared/bib/: references.bib
