[project]
name = "lrw-vep-ub2026"
version = "0.1.0"
description = "Workshop harness for Upper Bound 2026 — agent-driven variant effect prediction."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = "MIT"
authors = [
    { name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec" },
]

# These pins are the workshop env. Mirrored inline by the notebook's
# `s1-install` cell (for Colab attendees who never see this file) and by
# `experiments/notebooks/requirements-workshop.txt` (for pip-only users).
#
# Encoder backend is **fair-esm** (Facebook's official ESM library — the
# one Brandes 2023 used). It has no transformers dependency chain, no
# tokenizers version pin, and no numpy-ABI fight with Colab's pre-installed
# scientific stack. Bit-identical LLR to the HF transformers path (verified
# via verify_library_vep.py).
#
# Other floors:
#   - numpy <2.0 missing `numpy.strings`; capped <3 to stay ABI-stable
#   - pandas 3.x breaks Colab's google-colab / bqplot / gradio
#   - scikit-learn <1.3 deprecations the notebook hits
#   - seaborn 0.12.x kdeplot API differences
dependencies = [
    "fair-esm>=2.0",
    "torch>=2.0",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "umap-learn>=0.5",
    "wandb>=0.16",
    "nbformat>=5.10",
    "nbconvert>=7.16",
]

[project.urls]
Homepage = "https://github.com/latent-reasoning-works/lrw-vep-ub2026"

# This isn't a publishable package; uv treats it as a virtual project
# (deps-only). The submodule at `experiments/tools/manylatents-omics/`
# carries its own pyproject + venv — intentionally separate so fair-esm
# doesn't co-resolve with the workshop notebook's HF-transformers route.
[tool.uv]
package = false
