[project]
name = "lrw-vep-ub2026-workshop"
version = "0.1.0"
description = "Workshop notebook env for Upper Bound 2026 — agent-driven variant effect prediction with ESM-1b on ClinVar."
readme = "CLAUDE.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
    { name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec" },
]

# These pins mirror requirements-workshop.txt and the inline `s1-install`
# cell of 01_workshop_followalong.ipynb. Floors chosen to avoid:
#   - transformers <4.45 breakage on `output_hidden_states=True` for ESM
#   - numpy 2.x ABI conflicts with older torch wheels (capped <3)
#   - scikit-learn <1.3 deprecations the notebook hits
#   - seaborn 0.12.x kdeplot API differences
dependencies = [
    "transformers>=4.45,<6",
    "torch>=2.0",
    "numpy>=1.24,<3",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/latent-reasoning-works/lrw-vep-ub2026"

# No [build-system]: this isn't a publishable package, it's a uv-managed env
# over the workshop notebook. uv treats it as a virtual project (deps-only).
[tool.uv]
managed = true
package = false
